fix: add missing translation key for actions title

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -429,6 +429,7 @@
         "allStatus": "All Status"
       },
       "actions": {
+        "title": "Actions",
         "newDPC": "New DPC",
         "download": "Download",
         "view": "View Details",
