--- a/app/i18n/locales/tr.json
+++ b/app/i18n/locales/tr.json
@@ -478,6 +478,7 @@
         "allStatus": "Tüm Durumlar"
       },
       "actions": {
+        "title": "İşlemler",
         "newDPC": "Yeni DPC",
         "download": "İndir",
         "view": "Detayları Görüntüle",
