fix: resolve all translation issues in DPP components

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -496,60 +496,60 @@
     }
   },
   "dpp": {
+    "title": "Digital Product Passports",
+    "description": "Manage your DPPs and track production information",
     "list": {
       "title": "Digital Product Passports",
-      "description": "Manage your product DPPs and track manufacturing information",
+      "description": "View and manage your Digital Product Passports",
+      "serialNumber": "Serial Number",
+      "product": "Product",
+      "manufacturingDate": "Manufacturing Date",
+      "facility": "Facility",
       "filters": {
+        "all": "All Products",
         "type": {
-          "placeholder": "Filter by type",
-          "all": "All Products"
-        }
+          "placeholder": "Filter by type"
+        },
+        "agm": "AGM Batteries",
+        "efb": "EFB Batteries",
+        "standard": "Standard Batteries",
+        "marine": "Marine Batteries"
       },
       "actions": {
-        "create": "Create DPP",
-        "download": "Download",
-        "view": "View",
-        "edit": "Edit",
-        "delete": "Delete"
+        "title": "Actions",
+        "view": "View Details",
+        "download": "Download QR Code"
       },
-      "columns": {
-        "serialNumber": "Serial Number",
-        "product": "Product",
-        "manufacturingDate": "Manufacturing Date",
-        "facility": "Facility",
-        "actions": "Actions"
-      }
+      "noResults": "No DPPs found"
     },
-    "create": {
+    "new": {
       "title": "Create Digital Product Passport",
-      "description": "Generate a new DPP for an existing product",
+      "description": "Create a new DPP for an existing product",
       "form": {
         "product": {
           "label": "Product",
-          "placeholder": "Select product"
+          "placeholder": "Select product",
+          "error": "Product selection is required"
         },
         "serialNumber": {
           "label": "Serial Number",
-          "placeholder": "Enter serial number"
+          "placeholder": "Enter serial number",
+          "error": "Serial number is required"
         },
         "manufacturingDate": {
           "label": "Manufacturing Date",
-          "placeholder": "Select manufacturing date"
+          "placeholder": "Select manufacturing date",
+          "error": "Manufacturing date is required"
         },
-        "manufacturingFacility": {
+        "facility": {
           "label": "Manufacturing Facility",
-          "placeholder": "Enter facility name"
+          "placeholder": "Enter facility name",
+          "error": "Manufacturing facility is required"
         }
       },
       "buttons": {
         "cancel": "Cancel",
         "create": "Create DPP"
-      },
-      "validation": {
-        "productRequired": "Product selection is required",
-        "serialNumberRequired": "Serial number is required",
-        "manufacturingDateRequired": "Manufacturing date is required",
-        "manufacturingFacilityRequired": "Manufacturing facility is required"
       },
       "success": {
         "title": "Success!",
@@ -812,104 +812,6 @@
         "title": "Error",
         "description": "An unexpected error occurred while creating the product",
         "blockchain": "Product created but blockchain record failed: {error}"
-      }
-    }
-  },
-  "dpp": {
-    "title": "Digital Product Passports",
-    "description": "Manage product DPPs and track manufacturing information",
-    "list": {
-      "serialNumber": "Serial Number",
-      "product": "Product",
-      "manufacturingDate": "Manufacturing Date",
-      "facility": "Facility",
-      "actions": "Actions",
-      "noResults": "No DPPs found yet",
-      "filters": {
-        "all": "All Products",
-        "agm": "AGM Batteries",
-        "efb": "EFB Batteries",
-        "standard": "Standard Batteries",
-        "marine": "Marine Batteries"
-      }
-    },
-    "new": {
-      "title": "Create Digital Product Passport",
-      "description": "Create a new DPP for an existing product",
-      "form": {
-        "product": {
-          "label": "Product",
-          "placeholder": "Select a product",
-          "error": "Product selection is required"
-        },
-        "serialNumber": {
-          "label": "Serial Number",
-          "placeholder": "Enter serial number",
-          "error": "Serial number is required"
-        },
-        "manufacturingDate": {
-          "label": "Manufacturing Date",
-          "placeholder": "Select manufacturing date",
-          "error": "Manufacturing date is required"
-        },
-        "facility": {
-          "label": "Manufacturing Facility",
-          "placeholder": "Enter manufacturing facility",
-          "error": "Manufacturing facility is required"
-        }
-      },
-      "success": {
-        "title": "DPP Created",
-        "description": "Digital Product Passport has been created successfully"
-      },
-      "error": {
-        "title": "Error",
-        "description": "An error occurred while creating the DPP"
-      }
-    },
-    "details": {
-      "back": "Back to List",
-      "overview": {
-        "title": "Product Overview",
-        "manufacturer": "Manufacturer",
-        "serialNumber": "Serial Number",
-        "manufacturingDate": "Manufacturing Date"
-      },
-      "qr": {
-        "title": "Product QR Code",
-        "download": "Download QR Code",
-        "description": "Scan this code to verify the product"
-      }
-    },
-    "config": {
-      "title": "DPP Configuration",
-      "description": "Configure sections and fields to be included in your product's DPP",
-      "info": "Add or remove sections to customize your DPP. Required sections cannot be removed.",
-      "sections": {
-        "basicInfo": {
-          "title": "Basic Information",
-          "fields": {
-            "name": "Product Name",
-            "type": "Product Type",
-            "description": "Description"
-          }
-        },
-        "manufacturing": {
-          "title": "Manufacturing Details",
-          "fields": {
-            "serialNumber": "Serial Number",
-            "manufacturingDate": "Manufacturing Date",
-            "facility": "Manufacturing Facility"
-          }
-        },
-        "supplyChain": {
-          "title": "Supply Chain Information",
-          "fields": {
-            "supplier": "Supplier",
-            "origin": "Country of Origin",
-            "transportation": "Transportation Method"
-          }
-        }
       }
     }
   }
